index.html updates

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,4 +116,8 @@ footer {
     .w-100-mobile {
         width: 100% !important;
     }
+
+    .btm-border {
+        border-bottom: solid 1px #ffffffa3;
+    }
 }
