--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,11 @@ h2 {
 }
 
 /*  === MENU SECTION === */
+.menu-bg {
+    background-image: linear-gradient(#ffffffbe, #ffffffbe), url('/images/menu-bg.jpg');
+    background-size: cover;
+    background-position: center;
+}
 .card-hover:hover {
     transform: translateY(-5px);
     transition: transform 0.3s ease;
