--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ h2 {
     transition: transform 0.3s ease;
 }
 
+.fw-600 {
+    font-weight: 600;
+}
+
 /*  === CUSTOMIZATION SECTION  ==== */
 .customization-bg {
     background-image: linear-gradient(#00000060, #00000060), url('/images/customization-bg.jpg');
@@ -124,5 +128,9 @@ footer {
 
     .btm-border {
         border-bottom: solid 1px #ffffffa3;
+    }
+
+    .h-override-mobile {
+        height: auto !important;
     }
 }
