--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,10 @@ h2 {
     background-attachment: fixed;
 }
 
+.form-bg {
+    background-color: #00000060;
+}
+
 form label {
     font-weight: 500;
 }
