--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,10 @@ footer {
     font-size: 0.9rem;
 }
 
+.footer-link:hover {
+    color: var(--color-danger) !important;
+}
+
 /* === MEDIA QUERIES === */
 @media (max-width: 768px) {
     .w-100-mobile {
