--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,11 @@ h2 {
     letter-spacing: 1.5px;
 }
 
+h1::first-letter,
+h2::first-letter {
+    color: var(--color-danger)
+}
+
 .lead-head {
     font-size: 2rem;
 }
